# langchain-eden-marco

./: .gitignore  Makefile  README.md  cspell.json  pyproject.toml  userinput.py
src/: main.py
src/chapter_1/: README.md  __init__.py  chain.py  main.py
src/chapter_2/: README.md  __init__.py  app.py  chain.py  linkedin.py  main.py  output_parsers.py
src/chapter_2/linkedin/: agent.py  api.py
src/chapter_2/templates/: index.html
src/chapter_3/: README.md  app.py  callbacks.py  main.py
src/chapter_4/: README.md  main.py  tools.py
src/chapter_5/: README.md  faiss_ingestion.py  faiss_local_ingestion.py  main.py  pinecone_ingestion.py  pinecone_rag.py
src/chapter_6/: README.md  app.py  faiss_ingestion.py
src/chapter_7/: README.md  basic_math_agent.py  csv_agent.py  main.py  python_agent.py  router_agent.py
src/chapter_8/: README.md  main.py  nodes.py  react.py
src/linkedin/: agent.py
src/linkedin/mocks/: robert_molina_linkedin.json
